--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -62,11 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5075cc27-a949-494b-8eb8-8cc53d918d7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(2024, 2025)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(dt.now().year, 2025)"
+   ]
   }
  ],
  "metadata": {
